--- a/src/components/NetflixList/ListItem.scss
+++ b/src/components/NetflixList/ListItem.scss
@@ -25,18 +25,13 @@ $tileHeight: 259px;
 }
 
 
-
-
-
-
 // É o <div> principal
-.tile1 
+.tile
 {
     position: relative;
     display: inline-block;
     cursor: pointer;
 
-    // line-height: 0;
 
     overflow: hidden;
 
@@ -51,19 +46,16 @@ $tileHeight: 259px;
     transform-origin: 0 50%;
     float: left;
 
-    // Aumenta o tamanho
     &:hover 
     {
         transform: scale(1.4);
     }
-
-    // Move os itens a direita 
-    &:hover ~ .tile1 
+ 
+    &:hover ~ .tile 
     {
         transform: translate3D(65px, 0, 0);
     }  
 }
-
 
 
 // <div> que contém o título e descrição
@@ -78,7 +70,6 @@ $tileHeight: 259px;
 }
 
 
-
 // <div> que contém o tile-text-container
 .photo-overlay 
 {
@@ -90,7 +81,7 @@ $tileHeight: 259px;
     padding-left: 20px;
     padding-right: 20px;
     display: flex;
-    /*centering text inside .photo-overlay */
+
     justify-content: space-between;
     background: rgba(0, 0, 0, 0.5);
     opacity: 0;
@@ -101,7 +92,6 @@ $tileHeight: 259px;
         opacity: 1;
     }
 
-    // Description da imagem
     .tile-desc 
     {
         font-size: 0.6em;
@@ -119,7 +109,7 @@ $tileHeight: 259px;
 // === TELAS GRANDES === //
 @include maxMediaQueries(1400px) 
 {
-    .tile1 
+    .tile
     {
         width: $tileWidth * 0.95;
         height: $tileHeight * 0.95;
@@ -129,7 +119,7 @@ $tileHeight: 259px;
             transform: scale(1.4);
         }
 
-        &:hover ~ .tile1 
+        &:hover ~ .tile
         {
            transform: translate3d(65px, 0, 0);
         }
@@ -144,26 +134,23 @@ $tileHeight: 259px;
 {
 
 
-    .tile1 
+    .tile
     {
         width: $tileWidth * 0.8;
         height: $tileHeight * 0.8;
 
-        // Objeto aumenta
         &:hover 
         {
             transform: scale(1.4);
         }
 
-        // Todo tile que tiver na direita do objeto hovered vai andar 90 pra direita
-        &:hover ~ .tile1 
+        &:hover ~ .tile
         {
             transform: translate3d(63px, 0, 0);
         }
 
     }
 
-    // Provavelmente o titulo quando overlay
     .tile-title1 
     {
       font-size: 0.8em;
@@ -175,7 +162,7 @@ $tileHeight: 259px;
 @include maxMediaQueries(445px) 
 {
 
-    .tile1 
+    .tile
     {
         width: $tileWidth * 0.75;
         height: $tileHeight * 0.75;
@@ -185,7 +172,7 @@ $tileHeight: 259px;
           transform: scale(1.3);
         }
 
-        &:hover ~ .tile1 
+        &:hover ~ .tile
         {
             transform: translate3d(48px, 0, 0);
         }
